--- a/pom.xml
+++ b/pom.xml
@@ -11,5 +11,6 @@
 	<modules>
 		<module>core</module>
 		<module>shoppingassistant</module>
+		<module>lastplanner</module>
 	</modules>
 </project>
